<?xml version="1.0"?>
<package format="3">
  <name>koch_hardware</name>
  <version>0.0.1</version>
  <description>Hardware interface for Koch v1.1 robot</description>
  <maintainer email="quzhengrobot@gmail.com">Zheng Qu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dynamixel_hardware</depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_manifest="koch_hardware_plugin.xml"/>
  </export>
</package>
